--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.11.1",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.446.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.13",
