--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.446.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.13",
+    "nextjs-toploader": "^3.7.15",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
